# cppLoggingInterface

./: CMakeLists.txt  LICENSE  README.md
include/logging/: ConsoleLogger.hpp  logging.hpp
